--- a/templates/edit.html
+++ b/templates/edit.html
@@ -5,21 +5,18 @@
 </head>
 <body>
 <h1> Edit Users </h1>
-<form method="post" name="Edit User" action ="/update/{{ obje.id }}">
+<form method="post" action ="/update{{ Create.id }}">
 {% csrf_token %}
 <hr>
   <div class="form-group col-md-6">
     <label for="name">Name</label>
-    <input type="text" class="form-control" id="name" name="name" required="" value = "{{ obje.name }}" >
+    <input type="text" class="form-control" id="name" name="name" required="" value = "{{ object.name }}" >
   </div>
   <hr>
   <div class="form-group col-md-6">
     <label for="email">Email address</label>
-    <input type="email" class="form-control" id="email" name="email" required="" value = "{{ obje.email }}" >
-    
-    
+    <input type="email" class="form-control" id="email" name="email" required="" value = "{{ object.email }}" >  
   </div>
-
   <hr>
   <button type="submit" class="btn btn-primary">Update</button>
   <a href="/" class="btn btn-secondary">Cancle</a>
