--- a/templates/edit.html
+++ b/templates/edit.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <h1> Edit Users </h1>
-<form method="post" action ="/update{{ Create.id }}">
+<form method="post" action ="/update/{{ object.id }}">
 {% csrf_token %}
 <hr>
   <div class="form-group col-md-6">
